// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MultiSelect.svelte > should render using default field mapping 1`] = `
<input-select
  aria-label="test"
  class="relative flex flex-col "
  role="listbox"
  tabindex="0"
>
  <selected-item
    aria-selected="false"
    class="flex w-full items-center"
    role="option"
    tabindex="-1"
  >
    <item>
      <!---->
       
      <!---->
      <!---->
      
      <!---->
       
      <!---->
      <!---->
    </item>
     
    <icon
      aria-checked="false"
      aria-label="closed"
      data-disabled="false"
      data-size="base"
      data-tag-icon="true"
      role="img"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="selector-closed"
      />
      <!---->
    </icon>
    <!---->
  </selected-item>
   
  <!---->
</input-select>
`;

exports[`MultiSelect.svelte > should render using default field mapping 2`] = `
<input-select
  aria-label="test"
  class="relative flex flex-col open"
  role="listbox"
  tabindex="0"
>
  <selected-item
    aria-selected="false"
    class="flex w-full items-center"
    role="option"
    tabindex="-1"
  >
    <item>
      <!---->
       
      <!---->
      <!---->
      
      <!---->
       
      <!---->
      <!---->
    </item>
     
    <icon
      aria-checked="false"
      aria-label="opened"
      data-disabled="false"
      data-size="base"
      data-tag-icon="true"
      role="img"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="selector-opened"
      />
      <!---->
    </icon>
    <!---->
  </selected-item>
   
  <scroll
    class="absolute z-10 flex w-full flex-col overflow-scroll menu"
    style="top: 0px;"
  >
    <div
      aria-label="list"
      data-list=""
      role="listbox"
      tabindex="-1"
    >
      <!---->
       
      <div
        data-list-body=""
      >
        <!---->
        <div
          aria-current="false"
          aria-selected="false"
          data-list-item=""
          data-path="0"
          role="option"
        >
          <!---->
          <!---->
          <!---->
          
          <!---->
           
          <p>
            Two
          </p>
          <!---->
          
          <!---->
        </div>
        <div
          aria-current="false"
          aria-selected="false"
          data-list-item=""
          data-path="1"
          role="option"
        >
          <!---->
          <!---->
          <!---->
          
          <!---->
           
          <p>
            Three
          </p>
          <!---->
          
          <!---->
        </div>
        
        <!---->
      </div>
       
      <!---->
    </div>
    <!---->
  </scroll>
  <!---->
</input-select>
`;

exports[`MultiSelect.svelte > should render using default field mapping 3`] = `
<input-select
  aria-label="test"
  class="relative flex flex-col open"
  role="listbox"
  tabindex="0"
>
  <selected-item
    aria-selected="false"
    class="flex w-full items-center"
    role="option"
    tabindex="-1"
  >
    <item>
      <!---->
       
      <!---->
      <!---->
      
      <!---->
       
      <!---->
      <!---->
    </item>
     
    <icon
      aria-checked="false"
      aria-label="opened"
      data-disabled="false"
      data-size="base"
      data-tag-icon="true"
      role="img"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="selector-opened"
      />
      <!---->
    </icon>
    <!---->
  </selected-item>
   
  <scroll
    class="absolute z-10 flex w-full flex-col overflow-scroll menu"
    style="top: 0px;"
  >
    <div
      aria-label="list"
      data-list=""
      role="listbox"
      tabindex="-1"
    >
      <!---->
       
      <div
        data-list-body=""
      >
        <!---->
        <div
          aria-current="false"
          aria-selected="false"
          data-list-item=""
          data-path="0"
          role="option"
        >
          <!---->
          <!---->
          <!---->
          
          <!---->
           
          <p>
            Three
          </p>
          <!---->
          
          <!---->
        </div>
        
        <!---->
      </div>
       
      <!---->
    </div>
    <!---->
  </scroll>
  <!---->
</input-select>
`;
